<resources>
    <string name="app_name">tp3</string>
    <string name="main_activity">Main Activity</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="title_activity_exo1_fragment">Exo1Fragment</string>
    <string name="title_activity_exo1_activity">Exo1Activity</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="choose_a_hobby">Choose a hobby</string>
    <string name="sport">Sport</string>
    <string name="music">Music</string>
    <string name="reading">Reading</string>
    <string name="gaming">Gaming</string>
    <string name="submit">Submit</string>
    <string name="exo1_activity">Exo1 Activity</string>
    <string name="create_account">Create account :</string>
    <string name="title_activity_exo2">Exo2Activity</string>
    <string name="exo2_activity">Exo2 Activity</string>
    <string name="login_activity">Login Activity</string>
    <string name="sign_up_activity">Sign up Activity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_planning">PlanningActivity</string>
    <string name="slot_one">08h-10h :</string>
    <string name="slot_two">10h-12h :</string>
    <string name="slot_three">14h-16h :</string>
    <string name="slot_four">16h-18h :</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_planning_view">PlanningViewActivity</string>
    <string name="the_planning_for_this_day">The planning for</string>
</resources>